# algo

./: .gitignore  Cargo.toml
src/: circular.rs  error.rs  lib.rs  main.rs  percolation.rs  randomized_queue.rs  sieve.rs  union_find.rs
src/collinear_points/: line_segment.rs  mod.rs  point.rs
src/eight_puzzle/: board.rs  mod.rs  solver.rs
src/kdtrees/: kdtree.rs  mod.rs  point_set.rs
src/util/: bfs_directed.rs  digraph.rs  mod.rs  point2d.rs  rect_hv.rs  std_draw.rs
src/wordnet/: mod.rs  outcast.rs  sap.rs  wn.rs
