[package]
name = "algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
float-ord = "0.3.2"
itertools = "0.10.5"
plotters = "0.3.4"
rand = "0.8.5"
statrs = "0.16.0"
thiserror = "1.0.38"
